welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:9: error: not found: type nbMarches
for(i <- 0: nbMarches) {
            ^